POST_PUT_PATCH_DELETE

--- a/RestAssured_test/test-output/old/Default suite/classes.html
+++ b/RestAssured_test/test-output/old/Default suite/classes.html
@@ -11,7 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>test_4_delete</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test_3_patch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>test_1_post</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test_2_put</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
