--- a/RestAssured_test/test-output/emailable-report.html
+++ b/RestAssured_test/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3.549</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Test_POST</td><td><a href="#m0">test_1_post</a></td><td rowspan="1">1630893377058</td><td rowspan="1">7</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Test_POST</td><td><a href="#m0">test_1_post</a></td><td rowspan="1">1630895075083</td><td rowspan="1">1931</td></tr><tr class="passedeven"><td><a href="#m1">test_2_put</a></td><td rowspan="1">1630895077019</td><td rowspan="1">598</td></tr><tr class="passedeven"><td><a href="#m2">test_3_patch</a></td><td rowspan="1">1630895077618</td><td rowspan="1">500</td></tr><tr class="passedeven"><td><a href="#m3">test_4_delete</a></td><td rowspan="1">1630895078119</td><td rowspan="1">477</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">Test_POST#test_1_post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test_POST#test_2_put</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test_POST#test_3_patch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Test_POST#test_4_delete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
