--- a/RestAssured_test/test-output/index.html
+++ b/RestAssured_test/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse-1963924452\testng-customsuite.xml</span>
+                    <span>C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse--1548054238\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,6 +103,21 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Test_POST" class="method navigator-link" hash-for-method="test_1_post">test_1_post</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test_POST" class="method navigator-link" hash-for-method="test_2_put">test_2_put</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test_POST" class="method navigator-link" hash-for-method="test_3_patch">test_3_patch</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Test_POST" class="method navigator-link" hash-for-method="test_4_delete">test_4_delete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,12 +145,33 @@
                   <span class="method-name">test_1_post</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_2_put">
+                  </a> <!-- test_2_put -->
+                  <span class="method-name">test_2_put</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_3_patch">
+                  </a> <!-- test_3_patch -->
+                  <span class="method-name">test_3_patch</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test_4_delete">
+                  </a> <!-- test_4_delete -->
+                  <span class="method-name">test_4_delete</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse-1963924452\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse--1548054238\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +180,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Test_POST&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;test_1_post&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- Test_POST --&gt;
+      &lt;class name=&quot;Test_POST&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,16 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test_1_post')
 data.setCell(0, 2, 'Test_POST')
-data.setCell(0, 3, 7);
+data.setCell(0, 3, 1931);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'test_2_put')
+data.setCell(1, 2, 'Test_POST')
+data.setCell(1, 3, 598);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'test_3_patch')
+data.setCell(2, 2, 'Test_POST')
+data.setCell(2, 3, 500);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'test_4_delete')
+data.setCell(3, 2, 'Test_POST')
+data.setCell(3, 3, 477);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,6 +271,18 @@ return data;
               <div class="test-method">
                 <span class="method-name">test_1_post</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_2_put</span>
+                <span class="method-start">1936 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_3_patch</span>
+                <span class="method-start">2535 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test_4_delete</span>
+                <span class="method-start">3036 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
