--- a/RestAssured_test/test-output/old/Default suite/methods.html
+++ b/RestAssured_test/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c9a9c">  <td>21/09/05 22:56:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_POST.test_1_post()[pri:0, instance:Test_POST@61d6015a]">test_1_post</td> 
-  <td>main@2051120548</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>21/09/05 23:24:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_POST.test_1_post()[pri:0, instance:Test_POST@2cdd0d4b]">test_1_post</td> 
+  <td>main@726181440</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>21/09/05 23:24:37</td>   <td>1937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_POST.test_2_put()[pri:0, instance:Test_POST@2cdd0d4b]">test_2_put</td> 
+  <td>main@726181440</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>21/09/05 23:24:37</td>   <td>2536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_POST.test_3_patch()[pri:0, instance:Test_POST@2cdd0d4b]">test_3_patch</td> 
+  <td>main@726181440</td>   <td></td> </tr>
+<tr bgcolor="897b9a">  <td>21/09/05 23:24:38</td>   <td>3037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_POST.test_4_delete()[pri:0, instance:Test_POST@2cdd0d4b]">test_4_delete</td> 
+  <td>main@726181440</td>   <td></td> </tr>
 </table>
