--- a/AppiumDemoProject/test-output/index.html
+++ b/AppiumDemoProject/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse-191991352\testng-customsuite.xml</span>
+                    <span>C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse--862578024\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content skipped suite-Default_suite">
                       <span>
                         <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.BaseClass" class="method navigator-link" hash-for-method="sampleTest">sampleTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.Tests" class="method navigator-link" hash-for-method="test01">test01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Default_suite -->
@@ -120,18 +120,19 @@
           <div class="suite-Default_suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
               <img src="skipped.png"/>
-              <span class="class-name">tests.BaseClass</span>
+              <span class="class-name">tests.Tests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="sampleTest">
-                  </a> <!-- sampleTest -->
-                  <span class="method-name">sampleTest</span>
-                  <div class="stack-trace">java.lang.Error: Unresolved compilation problem: 
-	Exeception cannot be resolved to a type
+                  <a name="test01">
+                  </a> <!-- test01 -->
+                  <span class="method-name">test01</span>
+                  <div class="stack-trace">java.lang.Error: Unresolved compilation problems: 
+	Syntax error, insert &quot;}&quot; to complete Block
+	Syntax error, insert &quot;Finally&quot; to complete BlockStatements
 
-	at tests.BaseClass.setup(BaseClass.java:40)
+	at tests.BaseClass.setup(BaseClass.java:39)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -165,7 +166,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse-191991352\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SempreIT\AppData\Local\Temp\testng-eclipse--862578024\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -174,11 +175,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.BaseClass&quot;&gt;
+      &lt;class name=&quot;tests.Tests&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;sampleTest&quot;/&gt;
+          &lt;include name=&quot;test01&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tests.BaseClass --&gt;
+      &lt;/class&gt; &lt;!-- tests.Tests --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,8 +221,8 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'sampleTest')
-data.setCell(0, 2, 'tests.BaseClass')
+data.setCell(0, 1, 'test01')
+data.setCell(0, 2, 'tests.Tests')
 data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -242,9 +243,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">tests.Tests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">sampleTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -253,7 +261,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.BaseClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.Tests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <img src="failed.png">
                 </img>
@@ -261,8 +269,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">sampleTest</span>
-                <span class="method-start">-1631125060211 ms</span>
+                <span class="method-name">test01</span>
+                <span class="method-start">-1631125513853 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
