--- a/AppiumDemoProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/AppiumDemoProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d7fc87">  <td>21/09/08 15:17:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.sampleTest()[pri:0, instance:tests.BaseClass@5454d35e]">sampleTest</td> 
-  <td>main@1958680465</td>   <td></td> </tr>
-<tr bgcolor="d7fc87">  <td>21/09/08 15:17:40</td>   <td>-24</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:tests.BaseClass@5454d35e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1958680465</td>   <td></td> </tr>
+<tr bgcolor="d7fc87">  <td>21/09/08 15:25:13</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:tests.Tests@455b6df1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@951221468</td>   <td></td> </tr>
+<tr bgcolor="acbf9b">  <td>21/09/08 15:25:13</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tests.test01()[pri:0, instance:tests.Tests@455b6df1]">test01</td> 
+  <td>main@951221468</td>   <td></td> </tr>
 </table>
